# AD_TareaCorta

homework1/: case2.c
homework1/PartI/case1/: case1.txt
homework1/PartI/case2/: Valgrind_case2.txt  case2.c  case2.txt
homework1/PartI/case3/: case3  case3.txt
homework1/PartI/case4/: log.txt
homework1/PartII/: Makefile.am  README.md  clean.sh  configure.ac  setup.sh
homework1/PartII/lib/: Makefile.am  libmemcheck.c
homework1/PartII/src/: Makefile.am  memcheck.c
homework1/PartII/src/.deps/: memcheck.Po
homework1/case1/: Valgrind_case1.txt  case1
homework1/case2/: a.out  case2
homework1/case3/: Valgrind_case3.txt
homework1/case4/: case4.txt
